--- a/Caesar Rename Files.ipynb
+++ b/Caesar Rename Files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7a6dc24a",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,8 @@
     "    pass\n",
     "\n",
     "def Cipher(text, x):\n",
-    "\n",
+    "    #define a funtion change the text to cipher by shifting value of each alphatic character based on input x.\n",
+    "    #x should be integer between 1 to 15.\n",
     "    if x < 1:\n",
     "        raise ShiftValueError(\"shift_value too low.\")\n",
     "    elif x > 25:\n",
@@ -35,12 +36,13 @@
     "    return cipher\n",
     "\n",
     "def De_Cipher(text, x):\n",
+    "    #change the cipher back to original text by shifting value of each alphabetic character based on (26 - x).\n",
     "    return Cipher(text, (26-x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "eb65de91",
    "metadata": {},
    "outputs": [
@@ -61,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "08a899b5",
    "metadata": {},
    "outputs": [],
@@ -69,7 +71,23 @@
     "for file in os.listdir():\n",
     "    file_name, file_ext =os.path.splitext(file)\n",
     "    if file_ext == \".pdf\":\n",
-    "        new_name = De_Cipher(file_name, 8)\n",
+    "        new_name = Cipher(file_name, 10)\n",
+    "        new_file = new_name + file_ext\n",
+    "        os.rename(file, new_file)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "314eefaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for file in os.listdir():\n",
+    "    file_name, file_ext =os.path.splitext(file)\n",
+    "    if file_ext == \".pdf\":\n",
+    "        new_name = De_Cipher(file_name, 10)\n",
     "        new_file = new_name + file_ext\n",
     "        os.rename(file, new_file)\n",
     "        "
@@ -78,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "314eefaf",
+   "id": "1bf0e089",
    "metadata": {},
    "outputs": [],
    "source": []
