--- a/Caesar Rename Files.ipynb
+++ b/Caesar Rename Files.ipynb
@@ -11,7 +11,7 @@
     "    pass\n",
     "\n",
     "def Cipher(text, x):\n",
-    "    #define a funtion to change \"text\" by shifting value of each alphatic character based on input \"x\".\n",
+    "    #define a funtion to change \"text\" by shifting value of each alphabetical character based on input \"x\".\n",
     "    #\"x\" should be integer between 1 to 25.\n",
     "    if x < 1:\n",
     "        raise ShiftValueError(\"shift_value too low.\")\n",
@@ -36,7 +36,7 @@
     "    return cipher\n",
     "\n",
     "def De_Cipher(text, x):\n",
-    "    #change the text back to original one by shifting value of each alphabetic character based on (26 - x).\n",
+    "    #change the text back to original one by shifting value of each alphabetical character based on (26 - x).\n",
     "    return Cipher(text, (26-x))"
    ]
   },
