--- a/Caesar Rename Files.ipynb
+++ b/Caesar Rename Files.ipynb
@@ -17,11 +17,11 @@
     "        raise ShiftValueError(\"shift_value too low.\")\n",
     "    elif x > 25:\n",
     "        raise ShiftValueError(\"shift_value too high.\")\n",
-    "\n",
+    "        \n",
     "    cipher = \"\"   \n",
     "    for char in text:\n",
     "        if not char.isalpha():\n",
-    "            code = chr(ord(char))\n",
+    "            code = char\n",
     "        elif char.islower():\n",
     "            if ord(char)+x>=123:\n",
     "                code = chr(97+(ord(char)+x-123))\n",
